# cpp-ai-agent

./: .gitmodules  CMakeLists.txt  README.md
examples/: main.cpp
include/: AIClient.h  Agent.h  VectorDB.h
models/: deepseek-llm-7b-chat.Q2_K.gguf
src/: AIClient.cpp  Agent.cpp  VectorDB.cpp
